--- a/form/package.json
+++ b/form/package.json
@@ -8,15 +8,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fillerink/deta-form.git"
+    "url": "git+https://github.com/fillerink/deta-forms.git"
   },
   "author": "Sreeram Venkitesh",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/fillerink/deta-form/issues"
+    "url": "https://github.com/fillerink/deta-forms/issues"
   },
-  "homepage": "https://github.com/fillerink/deta-form#readme",
+  "homepage": "https://github.com/fillerink/deta-forms#readme",
   "dependencies": {
+    "ejs": "^3.1.3",
     "express": "^4.17.1"
   }
 }
