--- a/form/package.json
+++ b/form/package.json
@@ -4,7 +4,7 @@
   "description": "Creating customisable forms with Deta",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index"
   },
   "repository": {
     "type": "git",
